src/index.scss
@import 'node_modules/bulmaswatch/flatly/_variables';

// Colors
$primary: rgb(190, 5, 117);
$link: rgb(32, 63, 182);
$ig-blue: $link;
$info: #61afef;
$warning: #d19a66;
$success: #89ca78;

// All the other imports
@import 'bulma';
@import '~bulma-tooltip';
@import 'node_modules/bulma-badge/dist/css/bulma-badge';
@import 'node_modules/bulmaswatch/flatly/_overrides';
@import 'node_modules/react-image-gallery/styles/scss/image-gallery.scss';

// Gradient
.gradient {
  background: linear-gradient(45deg, $link, $primary);
}

// Gradient text
.gradientbg {
  background: linear-gradient(45deg, lighten($link, 25%), lighten($primary, 25%));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

// Gradient block {
.colorbar {
  height: 5px;
  width: 258px;
  margin: auto;
  margin-top: 3px;
  @extend .gradient;
}

// Nunito
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');

// Section headers and such
#shortcuts strong {
  @extend .gradientbg;
}

.fancy {
  font-family: 'Nunito';
}

.fancy .title {
  font-weight: bold;
}

// Fancy backgrounds
.city {
  background-image: linear-gradient(45deg, rgba(32, 63, 182, 0.7), rgba(190, 5, 117, 0.5)),
    url('./assets/pgh.jpg') !important;
  background-size: cover;
}

.city .button:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
}

// Shadow for profile picture
#profile {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
}

// Visit Pittsburgh link hover color
.footer-content a:hover {
  color: $white !important;
}

// Light blue link hover color
a:hover {
  color: $info;
}

a.tag:hover {
  text-decoration: none;
}

// Ignore link colors for block titles
.block .title {
  margin-bottom: 0.5rem;
}

// Spacing around descriptions and sections
#education {
  padding-bottom: 0.75rem;
}

#skills {
  padding-bottom: 1.5rem;
}

.block .title a:hover {
  color: $link;
}

.block .subtitle {
  margin-top: 0.5rem !important;
  @extend .has-text-grey;
}

.block .subtitle:not(:last-child) {
  margin-bottom: 0.25rem;
}

.block .subtitle:last-child,
.block .content:not(:last-child) {
  margin-bottom: 1rem;
}

.block .award:not(:last-child) {
  margin-bottom: 0.25rem;
}

.box:not(:last-child) {
  margin-bottom: 1.25rem;
}

.block-container > section.section {
  padding: 1.5rem 0.75rem 2.75rem 0.75rem;
}

.details-bar:not(:last-child) {
  margin-bottom: 0;
}

.skill-group:not(:last-child) {
  margin-bottom: 0.75rem !important;
}

// Mobile-specific stuff
@media screen and (max-width: $tablet) {
  // Reduce section top padding
  .section {
    padding-top: 1.5rem;
  }

  // Fullwidth, boxy headers
  .section.resume-body {
    padding: 0.75rem;
  }

  .section.resume-body .rounded {
    border-radius: 0;
  }

  // Padding for profile hero
  .profile-hero > .hero-body {
    padding-bottom: 6.5rem;
  }
}

// Expand/collapse course list
.course-list li:last-child {
  list-style-type: none;
}

// No margin after course work details
.course-list .notification {
  padding: 0.5rem;
}

// Don't capitalize block subtitles
.block .subtitle {
  text-transform: none;
}

// Don't limit iframe height
iframe.playlist-item {
  height: 380px;
}

// Search results container
.search-container {
  min-height: 100vh;
  overflow-x: hidden;
  padding: 0rem 0.5rem;
}

.search-modal .search-box {
  margin-top: 20vh;
}

// Navbars aren't rounded
.navbar {
  border-radius: 0;
}

// Center navbar elements
.navbar-item-centered {
  flex-grow: 1;
  justify-content: center;
}

// Do round section headers
.rounded {
  border-radius: $radius-large;
  @extend .has-shadow;
}

// Heroes don't decide white navbar color
.hero .navbar.is-white {
  background-color: white !important;
}

// Box shadow
.has-shadow {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
}

.dropdown-content {
  @extend .has-shadow;
}

// Bordered block boxes
.resume-body .box {
  background-color: white;
  border: 2px solid $grey-lighter;
  border-radius: $radius-large;
  transition: all 200ms ease;
}

.resume-body .box:hover {
  border-color: $grey-light;
}

// Block links
.block-link:hover {
  cursor: pointer;
}

// Image hero
.image-hero-container {
  position: relative;
}

.image-hero {
  width: 100% !important;
  object-fit: cover;
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 5%,
    rgba(0, 0, 0, 1) 15% 85%,
    rgba(0, 0, 0, 0) 95%
  );
}

.image-hero-text {
  position: absolute;
  bottom: 5%;
  right: 1rem;
  width: 150px;
}

// Sentence hero
.sentence-hero {
  padding: 5rem 0rem;
}

// Particles hero
.particles-hero {
  mask-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 5%,
    rgba(0, 0, 0, 1) 15% 85%,
    rgba(0, 0, 0, 0) 95%
  );
}

.particles-hero canvas {
  background-color: rgba(255, 0, 0, 0.5);
  animation: bgColor 15s infinite linear;
  height: 25vh !important;
}

@keyframes bgColor {
  12.5% {
    background-color: rgba(255, 0, 0, 0.5);
  }
  25% {
    background-color: rgba(255, 165, 0, 0.5);
  }
  37.5% {
    background-color: rgba(255, 255, 0, 0.5);
  }
  50% {
    background-color: rgba(127, 255, 0, 0.5);
  }
  62.5% {
    background-color: rgba(0, 255, 255, 0.5);
  }
  75% {
    background-color: rgba(0, 0, 255, 0.5);
  }
  87.5% {
    background-color: rgba(153, 50, 204, 0.5);
  }
  100% {
    background-color: rgba(255, 20, 147, 0.5);
  }
}

// Fix links in tabs
.tabs > a {
  @extend li;
}

// Relative image sizing
.image-fullwidth {
  width: 100%;
}

.image-fullheight {
  height: 100%;
}

// Sticky header
.sticky-header {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  z-index: 10000;
  background-color: $black;
}

.sticky-header-padding {
  padding: 0.5rem 0;
}

// 100vh hero
.hero-body-centered {
  display: flex;
  align-items: center;
}

